# lms_api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/: ci.yml
.github/workflows/: ci.yml
app/: dependencies.py  main.py  models.py
app/routers/: summarizer.py
app/services/: summarizer.py
tests/: test_summarizer.py
