[tool.poetry]
name = "lms-api"
version = "0.1.0"
description = "A demo API for a Language Model Service"
authors = ["Chris Morgan <cmorgan@abamaxa.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
transformers = "^4.41.2"
torch = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest = "^8.2.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
